samples/_failures_safe/1761447890_35888f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_915288de.c: In function ‘main’:
./samples/SAFE/__tmp_915288de.c:155:5: error: expected declaration or statement at end of input
  155 |     }
      |     ^
